@@ -23,11 +23,6 @@
  *  http://www.OARcorp.com/rtems/license.html.
  *
  *  $Id$
- *
- *  This material may be reproduced by or for the U.S. Government pursuant
- *  to the copyright license under the clause at DFARS 252.227-7013.  This
- *  notice must appear in all copies of this file and its derivatives.
- *
  */
 
 /*
